--- a/plugin.xml
+++ b/plugin.xml
@@ -19,8 +19,8 @@
 -->
 
 <plugin xmlns="http://apache.org/cordova/ns/plugins/1.0"
-           id="org.apache.cordova.inappbrowser"
-      version="0.4.1-dev">
+           id="org.apache.cordova.nom.inappbrowser"
+      version="0.0.1-dev">
 
     <name>InAppBrowser</name>
     <description>Cordova InAppBrowser Plugin</description>
