--- a/plugin.xml
+++ b/plugin.xml
@@ -40,7 +40,7 @@
         </js-module>
         <config-file target="res/xml/config.xml" parent="/*">
             <feature name="InAppBrowser"> 
-                <param name="android-package" value="org.apache.cordova.inappbrowser.InAppBrowser"/>
+                <param name="android-package" value="org.apache.cordova.nom.inappbrowser.InAppBrowser"/>
             </feature>
         </config-file>
 
@@ -73,7 +73,7 @@
         </js-module>
         <config-file target="res/xml/config.xml" parent="/*">
             <feature name="InAppBrowser"> 
-                <param name="android-package" value="org.apache.cordova.inappbrowser.InAppBrowser"/>
+                <param name="android-package" value="org.apache.cordova.nom.inappbrowser.InAppBrowser"/>
             </feature>
         </config-file>
 
