--- a/plugin.xml
+++ b/plugin.xml
@@ -19,7 +19,7 @@
 -->
 
 <plugin xmlns="http://apache.org/cordova/ns/plugins/1.0"
-           id="org.nom.inappbrowser"
+           id="org.apache.cordova.inappbrowser"
       version="3">
 
     <name>InAppBrowser</name>
